st: fix alignment of feedback list

--- a/src/components/Feedback/Feedback.scss
+++ b/src/components/Feedback/Feedback.scss
@@ -12,7 +12,7 @@
 
 .container{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 1rem;
     margin-top: 5vh;
     flex-direction: column;
@@ -26,8 +26,8 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    background-color: #ffffff;
-    color: black;
+    background-color: rgba(9, 0, 90, 0.733);
+    color: #f1f1f1;
 }
 
 .circle{
@@ -36,10 +36,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #ff6ad5;
+    background-color: #f1f1f1;
     color: #000000;
     border-radius: 50%;
     top: -18px;
     left: -18px;
     position: absolute;
+    font-weight: 600;
 }
