--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -17,6 +17,11 @@
     clip-path: polygon(0 100%, 100% 100%, 100% 100%,  0% 100%);
 }
 
+#preparagraph{
+    color: #f1f1f1;
+    margin-top: .5rem;
+}
+
 @keyframes Loader {
 
     from {
